fix: adjusted alignment of DoB and some navbar icons to be centered (#2433)

--- a/src/extension/features/budget/days-of-buffering/index.css
+++ b/src/extension/features/budget/days-of-buffering/index.css
@@ -3,6 +3,12 @@
   min-width: 6em;
 }
 
+.toolkit-days-of-buffering > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 /* Stop totals being crushed on smaller screens */
 .budget-header-totals {
   flex-shrink: 0;
